[TASK] add styling of footer

--- a/theme/src/styles/bootstrap/_index.scss
+++ b/theme/src/styles/bootstrap/_index.scss
@@ -24,7 +24,7 @@
 @import "../../../../node_modules/bootstrap/scss/card";
 // @import "../../../../node_modules/bootstrap/scss/carousel";
 // @import "../../../../node_modules/bootstrap/scss/dropdown";
-// @import "../../../../node_modules/bootstrap/scss/forms";
+@import "../../../../node_modules/bootstrap/scss/forms";
 // @import "../../../../node_modules/bootstrap/scss/custom-forms";
 // @import "../../../../node_modules/bootstrap/scss/input-group";
 // @import "../../../../node_modules/bootstrap/scss/jumbotron";
