--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -6,7 +6,7 @@
 
 // ===== content-elements =====
 @use 'content-elements/header';
-// @use 'content-elements/footer';
+@use 'content-elements/footer';
 @use 'content-elements/big-icon-text-button';
 // @use 'content-elements/accordion';
 // @use 'content-elements/contacts-card';
