--- a/theme/src/styles/_variables.scss
+++ b/theme/src/styles/_variables.scss
@@ -14,6 +14,9 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
+$blacklight: #1d1d1d;
+$grey:     #707070;
+
 $blue:    #007bff !default;
 $indigo:  green;
 $purple:  red;
