--- a/theme/src/styles/content-elements/footer/_index.scss
+++ b/theme/src/styles/content-elements/footer/_index.scss
@@ -20,23 +20,23 @@
 // check "theme/src/styles/bootstrap/mixins/_index.scss"
 @use '../../bootstrap/mixins' as mixin;
 
-
 // =========================================================
 // === Footer ==============================================
 // =========================================================
 .footer {
-  background: $footer-background;
-  border-top: 15px solid $footer-background;
-  margin-top: 50px;
-}
-
-._start-page + .footer {
-  margin: 0;
+  background: var.$blacklight;
+  padding-top: 140px;
+  font-family: var.$font-family-sans-serif;
+  font-weight: var.$font-weight-medium;
+  font-size: 14px;
+  color: var.$white;
+  -webkit-font-smoothing: antialiased;
+  text-transform: uppercase;
 }
 
 .footer p {
-  color: $footer-color;
-  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 0;
 }
 
 .footer h1,
@@ -45,31 +45,30 @@
 .footer h4,
 .footer h5,
 .footer h6 {
-  color: $footer-color;
-  font-weight: 400;
+  color: var.$white;
+  font-weight: var.$font-weight-bolder;
   letter-spacing: 0.2px;
-  padding-top: 20px;
+  -webkit-font-smoothing: antialiased;
 }
 
+
 .footer h4 {
-  border-bottom: 1px solid lighten($footer-background, 20%);
-  padding-bottom: 4px;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .footer a {
   transition: color 0.2s ease;
-  color: $footer-link-color;
-  font-weight: 400;
+  color: var.$white;
 
   &:hover,
   &:focus {
-      background-color: transparent;
-      color: $footer-link-hover-color;
+    color: var.$gray-500;
   }
 }
 
 .no-touch .footer a:hover {
-  color: $footer-link-hover-color;
+  color: var.$gray-500;
 }
 
 // -----------------------------------------------------------------------------
@@ -77,53 +76,20 @@
 
 // === Footer Quick Links===========
 // =================================
-.footer {
-  div[class*="frame-type-menu_"] > ul {
-      list-style: none;
-      padding: 0;
-      padding-bottom: 10px;
 
-      > li {
-          padding: 8px 0;
-      }
+.footer__logo {
+  margin-bottom: 34px;
+}
+
+footer ul {
+  list-style: none;
+  padding-left: 0;
+
+  li {
+    line-height: 50px;
   }
 }
 
-@media (max-width: 460px) {
-  .footer {
-      text-align: center;
-  }
-
-  .footer h4 {
-      border: none;
-  }
-}
-
-// -----------------------------------------------------------------------------
-// -----------------------------------------------------------------------------
-
-// =================================
-// === Footer Logo + contacts=======
-// =================================
-.footer {
-  .container:nth-child(2) {
-      .ce-textpic.ce-left {
-          display: flex;
-          flex-wrap: wrap;
-          align-items: flex-end;
-          justify-content: center;
-
-          > .ce-gallery {
-              margin-bottom: 0;
-          }
-
-          > .ce-bodytext > p {
-              margin: 20px 0 0;
-              line-height: 1;
-          }
-      }
-  }
-}
 // -----------------------------------------------------------------------------
 // -----------------------------------------------------------------------------
 
@@ -132,26 +98,26 @@
 // =================================
 
 // @media (min-width: $screen-md-min) {
-@include media-breakpoint-up(lg) {
+@include mixin.media-breakpoint-up(lg) {
   .footer .social-icons {
-      padding: 0;
-      text-align: right;
+    padding: 0;
+    text-align: right;
   }
 }
 
 .footer .social-icons {
   .social-icons__item {
-      color: $social-icons-bg-color;
+    color: var.$white;
   }
 }
 
 .no-touch .footer .social-icons__item {
   &:hover {
-      color: $social-icons-hover-color;
+    color: var.$gray-500;
 
-      & > .icons:after {
-          border-color: fade($social-icons-hover-color, 50%);
-      }
+    & > .icons:after {
+      border-color: fade(var.$gray-500, 50%);
+    }
   }
 }
 
@@ -162,54 +128,109 @@
 // === Footer Bottom ===============
 // =================================
 .footer {
-  .container:nth-child(3) {
-      border-top: 1px solid lighten($footer-background, 20%);
+  .footer-bottom__links a{
+    position: relative;
+    margin-left: 20px;
 
-      div[class*="frame-type-menu_"] > ul {
-          padding: 0;
-          text-align: center;
-
-          > li {
-              display: inline-block;
-              padding: 0;
-
-              > a {
-                  font-weight: 400;
-                  text-transform: uppercase;
-                  transition: color 0.2s ease;
-                  padding: 0 10px;
-                  font-size: 14px;
-              }
-          }
-      }
-
-      .frame-type-copyrightText {
-          padding-top: 12px;
-          text-align: center;
-      }
+    &:before {
+      content: '';
+      background-color: #fff;
+      width: 1px;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: -10px;
+    }
   }
 }
 
-@media (min-width: 992px) {
+
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+
+// =================================
+// === Media =======================
+// =================================
+
+@include mixin.media-breakpoint-between(sm, lg) {
+  .footer-middle .row > *:nth-child(1),.footer-middle .row > *:nth-child(2) {
+    margin-bottom: 120px;
+  }
+}
+
+@include mixin.media-breakpoint-down(md) {
   .footer {
-      .container:nth-child(2) {
-          .ce-textpic.ce-left {
-              justify-content: left;
-              margin-bottom: 15px;
-          }
-      }
+    text-align: center;
+  }
 
-      .container:nth-child(3) {
-          div[class*="frame-type-menu_"] > ul {
-              padding-top: 12px;
-              text-align: right;
-              margin-right: -25px; // Make links align with border-top
-          }
+  .footer-bottom {
+    flex-direction: column;
+  }
 
-          .frame-type-copyrightText {
-              margin-left: -15px;
-              text-align: left;
-          }
-      }
+  .footer-middle .row > * {
+    margin-bottom: 67px;
+  }
+
+  .footer p {
+    line-height: 50px;
+    margin-bottom: 0;
+  }
+}
+
+@include mixin.media-breakpoint-up(lg) {
+  .footer-middle {
+    margin-bottom: 86px;
+  }
+}
+
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+
+// =================================
+// === *Footer Form ===============
+// =================================
+.footer {
+  .form-control:focus, .form-control {
+    height: 56px;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    background-color: var.$grey;
+    color: var.$white;
+    box-shadow: none;
+    padding: 17px 19px;
+  }
+
+  .form-control::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: rgba(var.$white, .5);
+  }
+
+  .form-control::-moz-placeholder { /* Firefox 19+ */
+    color: rgba(var.$white, .5);
+  }
+
+  .form-control:-ms-input-placeholder { /* IE 10+ */
+    color: rgba(var.$white, .5);
+  }
+
+  .form-control:-moz-placeholder { /* Firefox 18- */
+    color: rgba(var.$white, .5);
+  }
+
+  .btn-primary {
+    border: 4px solid var.$white;
+    font-size: 16px;
+    height: 61px;
+    margin-top: 34px;
+    width: 100%;
+    font-weight: var.$font-weight-bolder;
+    letter-spacing: 0.2px;
+    -webkit-font-smoothing: antialiased;
+    text-transform: uppercase;
+    background-color: var.$blacklight;
+  }
+
+  .btn-primary:hover {
+    background-color: var.$gray-900;
   }
 }
