--- a/theme/src/styles/content-elements/header/_index.scss
+++ b/theme/src/styles/content-elements/header/_index.scss
@@ -145,7 +145,7 @@
 }
 
 .main-navigation .header-top__language-menu-btn {
-  line-height: 50px;
+  line-height: var.$nav-link-height;
 }
 
 .main-navigation .header-top__language-menu-box {
@@ -162,7 +162,7 @@
 
 .main-navigation .header-top__language-menu-box .header-top__language-menu-box-item {
   color: var.$black;
-  line-height: 50px;
+  line-height: var.$nav-link-height;
 }
 
 .main-navigation .header-top__language-menu {
@@ -276,7 +276,7 @@
   position: relative;
   display: block;
   width: 38px;
-  height: 50px;
+  line-height: var.$nav-link-height;
   overflow: hidden;
   white-space: nowrap;
   color: rgba(0, 0, 0, 0) !important;
@@ -372,7 +372,7 @@
   margin-top: -1px;
   left: 50%;
   margin-left: -10px;
-  background: var.$black;
+  background: var.$white;
   opacity: 0;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
@@ -435,7 +435,7 @@
 
 .main-navigation__search-box {
   position: relative;
-  height: 50px;
+  line-height: var.$nav-link-height;
   width: 100vw;
   bottom: 0;
   left: auto;
@@ -563,4 +563,9 @@
 .main-navigation__langMenu,
 .main-navigation__search {
   float: right;
+}
+
+.main-navigation__langMenu .header-top__language-menu-box-close-btn {
+  height: var.$nav-link-height;
+  top: 0;
 }
