[FEATURE] implement responsive image with <picture> tag based on BElayout colPos

--- a/Resources/Private/Templates/Page/4columns.html
+++ b/Resources/Private/Templates/Page/4columns.html
@@ -2,6 +2,23 @@
 
 <f:layout name="Default" />
 
+<f:comment>
+  # Columns pattern
+  # [1-10]     -> Header
+  # [11-20]    -> Footer
+  # [30-40]    -> Navigation/Breadcrumbs
+  # [50-90]    -> Additional content
+  # __________________________
+  # 100-900 -> All Content
+  # ***
+  # [100-199]  -> 100% column width (e.g., one column layout)
+  # [500-599]  -> 50% column width (e.g., two columns layout)
+  # [300-399]  -> 33% column width (e.g., three columns layout)
+  # [200-299]  -> 25% column width  (e.g., four columns layout)
+  # [700-799]  -> 75% column width
+  # __________________________
+</f:comment>
+
 <f:section name="Main">
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
@@ -10,10 +27,10 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:101}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:102}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:103}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:104}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:201}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:202}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:203}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:204}" />
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
 
