--- a/Resources/Private/Templates/ContentElements/Static/Image.html
+++ b/Resources/Private/Templates/ContentElements/Static/Image.html
@@ -1,11 +1,47 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+
 <f:layout name="Default" />
+
 <f:section name="Main">
 
-  <div class="ce-image ce-{gallery.position.horizontal} ce-{gallery.position.vertical}">
-    <f:render partial="Media/Gallery" arguments="{_all}" />
-  </div>
+  <f:for each="{image}" as="image">
 
-</f:section>
+    <figure class="figure">
+
+      <f:if condition="{image.link}">
+
+        <f:then>
+          <f:link.typolink parameter="{image.link}" title="{image.title}">
+            <f:render partial="Media/Picture" arguments="{_all}" />
+          </f:link.typolink>
+        </f:then>
+
+        <f:else>
+          <f:if condition="{data.image_zoom}">
+
+            <f:then>
+              <f:comment>TODO: add lightbox functionality</f:comment>
+            </f:then>
+
+            <f:else>
+              <f:render partial="Media/Picture" arguments="{_all}" />
+            </f:else>
+
+          </f:if>
+        </f:else>
+
+      </f:if>
+
+      <f:if condition="{image.description}">
+        <figcaption class="figure-caption"><f:format.nl2br>{image.description}</f:format.nl2br></figcaption>
+      </f:if>
+
+    </figure>
+  </f:for>
+
+
+  </f:section>
 
 </html>
+
+
