[TASK] update siteFooter CE and styling

--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -121,10 +121,14 @@
           </div>
           <div class="social-icons">
             <!-- Social Icon -->
-            <a class="social-icons__item" href="javascript:void(0)"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
-            <a class="social-icons__item" href="javascript:void(0)"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
-            <a class="social-icons__item" href="javascript:void(0)"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
-            <a class="social-icons__item" href="javascript:void(0)"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
+            <!-- <a class="social-icons__item" href="https://twitter.com/typo3" target="_blank" title="Twitter"><span class="icons icon-t3-twitter"></span></a>
+            <a class="social-icons__item" href="https://www.linkedin.com/company/typo3-association" target="_blank" title="LinkedIn"><span class="icons icon-t3-linkedin"></span></a>
+            <a class="social-icons__item" href="https://instagram.com/explore/tags/typo3/" target="_blank" title="Instagram"><span class="icons icon-t3-instagram"></span></a>
+            <a class="social-icons__item" href="https://www.facebook.com/typo3" target="_blank" title="Facebook"><span class="icons icon-t3-facebook"></span></a> -->
+            <a class="social-icons__item" href="https://twitter.com/typo3" target="_blank" title="Twitter"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
+            <a class="social-icons__item" href="https://www.linkedin.com/company/typo3-association" target="_blank" title="LinkedIn"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
+            <a class="social-icons__item" href="https://instagram.com/explore/tags/typo3/" target="_blank" title="Instagram"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
+            <a class="social-icons__item" href="https://www.facebook.com/typo3" target="_blank" title="Facebook"><img src="https://dummyimage.com/24x24/fff/000" alt=""></a>
           </div>
         </div>
       </f:if>
